--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="info">
         <h2>Welcome to BNG Recruit</h2>
-        <h3>A new type of angency</h3>
+        <h3>A new type of agency</h3>
         <p>I help businesses find talents in an efficient, risk-free, and cost-friendly manner.</p>
         <a href="#contact" class="btn">GET STARTED<i class="fas fa-arrow-circle-right"></i></a>
       </div>
@@ -76,7 +76,7 @@
         <div class="about-info">
           <div class="description">
             <h3>BNG Recruit</h3>
-            <h4>Your next <span>Recruiting agnecy</span></h4>
+            <h4>Your next <span>Recruiting agency</span></h4>
             <p>I care about your brand. I will treat it as if it were my own. The recommendations I provide to my clients are based on my extensive industry experience. Whatever it is you need, I am there to solve it. <br> <br>
 
               With a full understanding that recruitment can be costly, risky, and time-consuming, I strive to fulfill my vision - to offer businesses the opportunity to find talents in an efficient, risk-free, and cost-effective manner. That's why I don't charge any fees until I have found the perfect candidate for you and also provide a guarantee. Yes, you read that right - I take ALL the responsibility!</p>
